--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@types/jest": "^23.3.9",
+    "bulma": "^0.7.2",
     "core-js": "^2.5.4",
+    "ng2-smart-table": "^1.3.5",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
